# vigil

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vigil/: __init__.py  cli.py  indexer.py  scanner.py
tests/: test_scanner.py
