[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-memory"
version = "0.1.0"
description = "Memory health monitor for AI agents — detects contradictions, duplicates, staleness, and orphan references"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Eli", email = "vigil@example.com" },
]
keywords = ["ai", "agents", "memory", "health", "contradictions", "NLI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
nli = ["sentence-transformers>=2.2.0"]

[project.scripts]
vigil = "vigil.cli:main"

[project.urls]
Homepage = "https://github.com/kultmember6banger/vigil"
Issues = "https://github.com/kultmember6banger/vigil/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]
